--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = shuup-rest-api
-version = 1.0.0.dev0
-description =
+version = 1.0.0
+description = Shuup REST API
 long_description = file: README.md
-keywords =
+keywords = shuup rest api drf ecommerce
 
 [options]
 include_package_data = True
