Post-release update for 1.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = shuup-rest-api
-version = 1.0.0
+version = 1.0.0.post+gitver
 description = Shuup REST API
 long_description = file: README.md
 keywords = shuup rest api drf ecommerce
