--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,8 +1,8 @@
 -e .
-flake8
-isort
-pytest
-pytest-sugar
-pytest-django
+flake8>3,<4
+isort>4.3,<5
+pytest==5.4.1
+pytest-sugar==0.9.4
+pytest-django==3.8.0
 pytest-coverage
 beautifulsoup4
