--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,8 @@ keywords = shuup rest api drf ecommerce
 include_package_data = True
 packages = find:
 install_requires =
-    shuup
-    shuup_api
+    shuup>2,<3
+    shuup_api>=2.0,<3
 
 [options.entry_points]
 shuup.addon = shuup_rest_api = shuup_rest_api
